--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.1",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper": "^1.3.11",
+    "react-redux": "^7.2.5",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
